k8s/calibre/statefuleset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre 
spec:
  replicas: 1
  serviceName: calibre
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      name: calibre
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: lscr.io/linuxserver/calibre:latest
        imagePullPolicy: Always
        ports:
          - name: calibre
            containerPort: 8080
        volumeMounts:
        - mountPath: "/config"
          name: calibre-library
        - mountPath: "/downloads"
          name: completed-torrents 
      volumes:
      - name: calibre-library
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.calibre-library
          lun: 1
          fsType: ext4
          readOnly: false
      - name: completed-torrents
        nfs:
          server: library.faircloth.ca
          path: /volume1/downloads/completed_torrents
