k8s/calibre/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: calibre
spec:
  selector:
    app: calibre
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
